[metadata]
name = nagare-services-security-saml-listener
author = Net-ng
author_email = alain.poirier@net-ng.com
description = SAML listener
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/services-security-saml-listener
    Tracker = https://github.com/nagareproject/services-security-saml-listener/issues

[options]
zip_safe = False
packages = find:
install_requires =
    nagare-services
    nagare-services-sessions

[options.entry_points]
nagare.services =
    saml_listener = nagare.services.security.saml_listener:Service

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
